# pathx

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: join.rs  normalize.rs  relative.rs  strip_root.rs  subpath.rs  template.rs
src/: lib.rs
src/utils/: is_subpath.rs  join.rs  macros.rs  mod.rs  normalize.rs  relative_to.rs  separator.rs  strip_root.rs  templating.rs
tests/: is_subpath.rs  join.rs  normalize.rs  relative_to.rs  strip_root.rs  template.rs
